[package]
name = "asn-fetcher"
version = "0.1.1"
edition = "2021"
authors = ["Manu Gupta"]
description = "A CLI tool to fetch ASN (Autonomous System Number) information from IP addresses"
license = "MIT"
readme = "README.md"
repository = "https://github.com/manugupt1/asn-fetcher-rs"
homepage = "https://github.com/manugupt1/asn-fetcher-rs"
documentation = "https://docs.rs/asn-fetcher"
keywords = ["asn", "ip", "network", "bgp", "autonomous-system"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
